# legaltech-research

./: .env.example  .gitignore  PROTOCOLO.md  README.md  RILP-v2.md
.aiox-core/: .installed-manifest.yaml  core-config.yaml  package-lock.json  version.json
.aiox-core/data/: entity-registry.yaml
.aiox/handoffs/: handoff-2026-05-19-2200.yaml  handoff-2026-06-26-1130.yaml  handoff-2026-07-04-1515.yaml  handoff-2026-07-04-1730.yaml  handoff-2026-07-04-1807.yaml  handoff-2026-07-11-2256.yaml
.antigravity/: antigravity.json
.claude/: CLAUDE.md  settings.json
.claude/rules/: agent-authority.md  agent-handoff.md  agent-memory-imports.md  coderabbit-integration.md  ids-principles.md  mcp-usage.md  story-lifecycle.md  tool-examples.md  tool-response-filtering.md  workflow-execution.md
docs/: A-FAZER.md  DECISIONS.md  FASE-C-SPEC.md  OPERATIONAL-BLUEPRINT.md  PLANO-YOLO-RUN000.md  RADIOGRAFIA-2026-07-04.md
docs/research/2026-07-11-rilp-produto-validacao/: VEREDITO-quadro-fechado.md  gemini-deepresearch.md  nosso-time-sintese.md
docs/sprints/: sprint-current.yaml
domain-packs/: legaltech-v1.yaml
engine/: pyproject.toml
engine/rilp/: benchmark.py  cli.py  domain_pack.py  models.py  runner.py  scoring.py
engine/schemas/: benchmark-rubric.schema.yaml  domain-pack.schema.yaml
engine/tests/: test_benchmark.py  test_domain_pack.py  test_runner.py  test_scoring.py
engine/tests/fixtures/: benchmark.yaml
runs/run-000-legaltech/: MANIFEST.yaml  comparacao.md
runs/run-000-legaltech/baseline/: baseline-deep-research.md  benchmark.yaml
(+9 files in other folders)
